--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-onboarding-swiper": "^1.2.0",
-    "expo-dev-client": "~3.3.11"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
