--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "redux": "5.0.0",
+    "prop-types": "*",
     "@rneui/base": "^4.0.0-rc.7",
     "react-redux": "^9.1.2",
+    "@types/react": "18.2.25",
     "@rneui/themed": "^4.0.0-rc.8",
     "@reduxjs/toolkit": "^2.2.5",
     "react-native-svg": "15.2.0",
+    "@expo/vector-icons": "^14.0.0",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-pager-view": "6.3.0",
     "@react-navigation/native": "^6.1.17",
+    "react-native-vector-icons": "*",
+    "@react-navigation/bottom-tabs": "*",
     "@react-navigation/native-stack": "^6.9.26",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.10.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@expo/vector-icons": "^14.0.0",
-    "@types/react": "18.2.25",
-    "redux": "5.0.0",
-    "react-native-pager-view": "6.3.0",
-    "react-native-screens": "3.31.1",
-    "prop-types": "*",
-    "@react-navigation/bottom-tabs": "*",
-    "react-native-vector-icons": "10.1.0"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
