--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-svg": "15.2.0",
     "@expo/vector-icons": "^14.0.0",
     "react-native-screens": "3.31.1",
+    "react-native-elements": "*",
     "react-native-tab-view": "^3.5.2",
+    "@react-navigation/stack": "*",
     "react-native-pager-view": "6.3.0",
     "@react-navigation/native": "^6.1.17",
     "react-native-vector-icons": "*",
@@ -30,7 +32,8 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.10.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
