--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "react-native-pager-view": "6.3.0",
     "@react-navigation/native": "^6.1.17",
     "react-native-vector-icons": "*",
+    "react-native-gesture-handler": "~2.16.1",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/native-stack": "^6.9.26",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.10.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-keyboard-aware-scroll-view": "*",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
