--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-native-screens": "3.31.1",
     "react-native-elements": "*",
     "react-native-tab-view": "^3.5.2",
+    "react-native-pie-chart": "*",
     "@react-navigation/stack": "*",
     "react-native-pager-view": "6.3.0",
+    "react-native-svg-charts": "*",
     "@react-navigation/native": "^6.1.17",
     "react-native-vector-icons": "*",
     "react-native-gesture-handler": "~2.16.1",
@@ -34,7 +36,8 @@
     "react-native-safe-area-context": "4.10.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "react-native-keyboard-aware-scroll-view": "*",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "react-native-month-picker": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
