--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.8",
+    "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -35,7 +35,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.10.1",
+    "react-native-modal-datetime-picker": "*",
     "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-native-community/datetimepicker": "8.0.1",
     "react-native-keyboard-aware-scroll-view": "*",
     "@react-native-async-storage/async-storage": "1.23.1"
   },
