--- a/package.json
+++ b/package.json
@@ -7,39 +7,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "*",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react": "18.2.25",
+    "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
+    "prop-types": "*",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "redux": "5.0.0",
-    "prop-types": "*",
-    "@rneui/base": "^4.0.0-rc.7",
-    "react-redux": "^9.1.2",
-    "@types/react": "18.2.25",
-    "@rneui/themed": "^4.0.0-rc.8",
-    "@reduxjs/toolkit": "^2.2.5",
-    "react-native-svg": "15.2.0",
-    "@expo/vector-icons": "^14.0.0",
-    "react-native-screens": "3.31.1",
     "react-native-elements": "*",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-pie-chart": "*",
-    "@react-navigation/stack": "*",
-    "react-native-pager-view": "6.3.0",
-    "react-native-svg-charts": "*",
-    "@react-navigation/native": "^6.1.17",
-    "react-native-month-picker": "*",
-    "react-native-vector-icons": "*",
     "react-native-gesture-handler": "~2.16.1",
-    "@react-navigation/bottom-tabs": "*",
-    "@react-navigation/native-stack": "^6.9.26",
-    "react-native-onboarding-swiper": "^1.2.0",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-modal-datetime-picker": "*",
-    "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-native-community/datetimepicker": "8.0.1",
     "react-native-keyboard-aware-scroll-view": "*",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-modal-datetime-picker": "*",
+    "react-native-month-picker": "*",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-pie-chart": "*",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-charts": "*",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "*",
+    "react-redux": "^9.1.2",
+    "redux": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
