--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "*",
-    "@reduxjs/toolkit": "^2.2.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react": "18.2.25",
@@ -38,9 +37,7 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-charts": "*",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "*",
-    "react-redux": "^9.1.2",
-    "redux": "5.0.0"
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
